--- a/Analysis.Rmd
+++ b/Analysis.Rmd
@@ -4,6 +4,10 @@ author: "Atul Preetham"
 date: "24/10/2021"
 output: html_document
 bibliography: references.bib
+params:
+  state: "North Carolina"
+  data: "data/raw_data/applemobilitytrends-2021-10-23.csv"
+
 ---
 
 ```{r setup, include=FALSE}
@@ -14,7 +18,7 @@ knitr::opts_chunk$set(echo = TRUE, message = TRUE)
 
 ```{r set-parameters}
 # set the state to work with
-state_to_analyse <- "North Carolina"
+state_to_analyse <- params$state
 
 # sanitizing the state names for output files
 state_no_spaces <- gsub(state_to_analyse,
@@ -22,7 +26,7 @@ state_no_spaces <- gsub(state_to_analyse,
                         replacement = "_")
 
 # set the name of the global data file to use
-global_file_to_process <- "data/raw_data/applemobilitytrends-2021-10-23.csv"
+global_file_to_process <- params$data
 
 #extract core name for output file naming use
 core_name <- tools::file_path_sans_ext(basename(global_file_to_process))
